<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mainbg"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/BLEButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/buttonScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cameraButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/BLEButtons" >
        <Button
            android:id="@+id/prefButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferences"/>
        <Button
            android:id="@+id/balanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ResetCamera"/>
        <ToggleButton
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/Follow"
            android:textOff="@string/Radio"/>

    </LinearLayout>

    <TextView
        android:id="@+id/rearDistance"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:text="Inf"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:src="@drawable/ic_simpleyellowcartopview"
        app:layout_constraintTop_toBottomOf="@+id/cameraButtons">

    </ImageView>
    <TextView
        android:id="@+id/frontRightDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inf"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"/>

    <TextView
        android:id="@+id/frontLeftDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inf"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/directions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButtons">

        <TextView
            android:id="@+id/serialReceivedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:textColor="#FF0000"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toTopOf="@id/directions"
            app:layout_constraintTop_toBottomOf="@+id/cameraButtons" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/directions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/speed">

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_undo_black_24dp" />

        <ImageButton
            android:id="@+id/straightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_upward_black_24dp" />

        <ImageButton
            android:id="@+id/rightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_redo_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/controls">

        <ImageButton
            android:id="@+id/slowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_fast_rewind_black_24dp" />

        <ImageButton
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_stop_black_24dp" />

        <ImageButton
            android:id="@+id/fastButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_fast_forward_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/wifiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_wifi_black_24dp" />

        <ImageButton
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_perm_device_information_black_24dp" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
